re PR target/29198 (Incorrect reference to __thread array with -fPIC -O2 on x86)

PR target/29198
	* config/i386/i386.c (legitimize_pic_address): Reject TLS symbols.
	* config/i386/predicates.md (local_symbolic_operand): Likewise.

	* gcc.dg/tls/opt-12.c: New test.

From-SVN: r117483